# Trekker

./: .env  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  GSoC_2026_Proposals.md  README.md  UGV_ROS_ROADMAP.md  docker-compose.yml  docs.md
docs/: hardware_validation_checklist.md  rosbag_testing_guide.md
scripts/: rosbag_playback.sh  rosbag_record.sh  validate_hardware.sh
src/ugv_bringup/: package.xml  setup.py
src/ugv_bringup/launch/: bringup.launch.py
src/ugv_dashboard/: package.xml  setup.cfg  setup.py
src/ugv_dashboard/ugv_dashboard/: mqtt_bridge_node.py  schemas.py
src/ugv_localization/: package.xml  setup.cfg  setup.py
src/ugv_localization/config/: ekf.yaml
src/ugv_localization/launch/: localization.launch.py
src/ugv_localization/test/: test_odometry.py
src/ugv_localization/ugv_localization/: imu_node.py  joint_state_node.py  odometry_node.py
src/ugv_navigation/: package.xml  setup.cfg  setup.py
src/ugv_navigation/config/: nav2_params.yaml
src/ugv_navigation/launch/: navigation.launch.py
src/ugv_navigation/ugv_navigation/: waypoint_patrol_node.py
src/ugv_vision/: package.xml  setup.py
src/ugv_vision/launch/: vision.launch.py
src/ugv_vision/ugv_vision/: camera_node.py  hazard_detector_node.py  image_capture_node.py  inspection_trigger_node.py
